@@ -9,14 +9,13 @@
 #include <string.h>
 #include <stdlib.h> // exit
 
-char   log_db_ip[32] = "127.0.0.1";
+char   log_db_hostname[32] = "127.0.0.1";
 uint16 log_db_port = 3306;
-char   log_db_id[32] = "ragnarok";
-char   log_db_pw[32] = "ragnarok";
-char   log_db_db[32] = "ragnarok";
-char   log_db[32] = "log";
+char   log_db_username[32] = "ragnarok";
+char   log_db_password[32] = "ragnarok";
+char   log_db_database[32] = "log";
+char   loginlog_table[256] = "loginlog";
 
-char loginlog_db[256] = "loginlog";
 Sql* sql_handle;
 bool enabled = false;
 
@@ -38,7 +37,7 @@ void login_log(uint32 ip, const char* username, int rcode, const char* message)
 
 	retcode = Sql_Query(sql_handle,
 		"INSERT INTO `%s`(`time`,`ip`,`user`,`rcode`,`log`) VALUES (NOW(), '%s', '%s', '%d', '%s')",
-		loginlog_db, ip2str(ip,NULL), esc_username, rcode, message);
+		loginlog_table, ip2str(ip,NULL), esc_username, rcode, message);
 
 	if( retcode != SQL_SUCCESS )
 		Sql_ShowDebug(sql_handle);
@@ -48,7 +47,7 @@ bool loginlog_init(void)
 {
 	sql_handle = Sql_Malloc();
 
-	if( SQL_ERROR == Sql_Connect(sql_handle, log_db_id, log_db_pw, log_db_ip, log_db_port, log_db_db) )
+	if( SQL_ERROR == Sql_Connect(sql_handle, log_db_username, log_db_password, log_db_hostname, log_db_port, log_db_database) )
 	{
 		Sql_ShowDebug(sql_handle);
 		Sql_Free(sql_handle);
@@ -69,26 +68,23 @@ bool loginlog_final(void)
 
 bool loginlog_config_read(const char* key, const char* value)
 {
-	if( strcmpi(key, "log_db_ip") == 0 )
-		safestrncpy(log_db_ip, value, sizeof(log_db_ip));
+	if( strcmpi(key, "log_db_hostname") == 0 )
+		safestrncpy(log_db_hostname, value, sizeof(log_db_hostname));
 	else
 	if( strcmpi(key, "log_db_port") == 0 )
 		log_db_port = (uint16)strtoul(value, NULL, 10);
 	else
-	if( strcmpi(key, "log_db_id") == 0 )
-		safestrncpy(log_db_id, value, sizeof(log_db_id));
+	if( strcmpi(key, "log_db_username") == 0 )
+		safestrncpy(log_db_username, value, sizeof(log_db_username));
 	else
-	if( strcmpi(key, "log_db_pw") == 0 )
-		safestrncpy(log_db_pw, value, sizeof(log_db_pw));
+	if( strcmpi(key, "log_db_password") == 0 )
+		safestrncpy(log_db_password, value, sizeof(log_db_password));
 	else
-	if( strcmpi(key, "log_db_db") == 0 )
-		safestrncpy(log_db_db, value, sizeof(log_db_db));
+	if( strcmpi(key, "log_db_database") == 0 )
+		safestrncpy(log_db_database, value, sizeof(log_db_database));
 	else
-	if( strcmpi(key, "log_db") == 0 )
-		safestrncpy(log_db, value, sizeof(log_db));
-	else
-	if( strcmpi(key, "loginlog_db") == 0 )
-		safestrncpy(loginlog_db, value, sizeof(loginlog_db));
+	if( strcmpi(key, "loginlog_table") == 0 )
+		safestrncpy(loginlog_table, value, sizeof(loginlog_table));
 	else
 		return false;
 
